# tissue-growth-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  comp.sh
grid-based/: .gitignore  CMakeLists.txt  README.md  cellular_automata.cpp  cellular_automata.hpp  comp.sh  main.cpp
src/: cellular_automata.cpp  main.cpp
